alignment issue tablet view fixing and some other section have issues are fixed by vinushiyaa

--- a/enquiry-automation.html
+++ b/enquiry-automation.html
@@ -63,6 +63,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fi-css@2.0.1/dist/fi.css" />
 
     <link href="css/enquiry.css" rel="stylesheet" type="text/css" />
+
+
+
 </head>
 
 <body>
@@ -223,6 +226,8 @@
     </div>
 
 
+  
+  
              <!-- Benefit section  for  -->
 <section class="pt-10 usecase-section-workflow">
     <div class="container">
@@ -267,7 +272,7 @@
                                     Faster Response Times
                                 </h4>
                             </div>
-                            <p>Ensure timely communication with customers and reduce the response cycle.</p>
+                            <p>Ensure timely communication with customers, reduce the response cycle, and enhance overall customer satisfaction.</p>
                             <span class="rounded-button1">
                                 <i class="fa fa-stopwatch"></i>
                             </span>
@@ -282,10 +287,10 @@
                             <div class="service-title">
                                 <h4 class="project-heading">Intelligent Data Processing</h4>
                             </div>
-                            <p>Leverage IDP technology to manage complex documents and attachments.</p>
+                            <p>Leverage IDP technology to efficiently manage complex documents, attachments, and data extraction.</p>
                             <span class="rounded-button1">
-                                <i class="fa fa-brain"></i>
-                            </span>
+                                <i class="fa fa-folder"></i>
+                              </span>
                         </div>
                         <div class="service-image">
                             <img src="images/bautomate-main/enquiry-benefits-3.webp" class="img-fluid drive-projects-img" alt="">
@@ -297,7 +302,7 @@
                             <div class="service-title">
                                 <h4 class="project-heading">Real-Time Visibility</h4>
                             </div>
-                            <p>Keep track of enquiry statuses and updates with automated notifications.</p>
+                            <p>Keep track of enquiry statuses, receive real-time updates, and stay informed with automated notifications.</p>
                             <span class="rounded-button1">
                                 <i class="fa fa-eye"></i>
                             </span>
@@ -312,7 +317,7 @@
                             <div class="service-title">
                                 <h4 class="project-heading">Scalable Automation   </h4>
                             </div>
-                            <p>Easily adapt to growing enquiry volumes without increasing manpower.</p>
+                            <p>Efficiently manage growing enquiry volumes without the need to increase manpower, ensuring seamless scalability.</p>
                             <span class="rounded-button1">
                                 <i class="fa fa-chart-line"></i>
                             </span>
