--- a/freight-forwarding-automation.html
+++ b/freight-forwarding-automation.html
@@ -332,7 +332,7 @@
                                 <h4 class="project-heading">                              
                                     End-to-End Automation</h4>
                             </div>
-                            <p>Handle everything from customer enquiry to booking without human intervention.
+                            <p>Effortlessly handle everything from customer enquiry to booking without human intervention, ensuring efficiency and accuracy.
                             </p>
                             <span class="rounded-button1">
                                 <i class="fa fa-cogs"></i>
@@ -340,7 +340,7 @@
                         </div>
                         <div class="service-image">
 
-                            <img src="images/bautomate-main/freight_forward-1.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-1.webp" class="img-fluid drive-projects-img" alt="">
 
                         </div>
                     </div>
@@ -352,14 +352,13 @@
                                     Al Bots & Co-Pilots
                                 </h4>
                             </div>
-                            <p>Leverage intelligent bots to automate repetitive tasks and streamline processes.</p>
+                            <p>Leverage intelligent bots to automate repetitive tasks, enhance productivity, and streamline processes for faster decision-making.</p>
                             <span class="rounded-button1">
                                 <i class="fa fa-robot"></i>
                             </span>
                         </div>
                         <div class="service-image">
-
-                            <img src="images/bautomate-main/freight_forward-2.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-2.webp" class="img-fluid drive-projects-img" alt="">
 
                         </div>
                     </div>
@@ -369,14 +368,14 @@
                             <div class="service-title">
                                 <h4 class="project-heading">Faster Response Times</h4>
                             </div>
-                            <p>Improve your customer service with instant replies and accurate quotes.</p>
+                            <p>Improve customer service with instant replies, accurate quotes, and reduced wait times.</p>
                             <span class="rounded-button1">
                                 <i class="fa fa-bolt"></i>
                               </span>
                         </div>
                         <div class="service-image">
 
-                            <img src="images/bautomate-main/freight_forward-3.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-3.webp" class="img-fluid drive-projects-img" alt="">
 
                         </div>
                     </div>
@@ -386,14 +385,14 @@
                             <div class="service-title">
                                 <h4 class="project-heading">Seamless Integration</h4>
                             </div>
-                            <p>Integrate with existing systems for smooth data flow and improved efficiency.</p>
+                            <p>Integrate with existing systems for smooth data flow, enhanced collaboration, and improved operational efficiency.</p>
                             <span class="rounded-button1">
                                 <i class="fa fa-puzzle-piece"></i>
                             </span>
                         </div>
                         <div class="service-image">
 
-                            <img src="images/bautomate-main/freight_forward-4.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-4.webp" class="img-fluid drive-projects-img" alt="">
 
                         </div>
                     </div>
@@ -403,14 +402,14 @@
                             <div class="service-title">
                                 <h4 class="project-heading">Cost Savings</h4>
                             </div>
-                            <p>Reduce costs and eliminate errors with automation for efficiency and accuracy.</p>
+                            <p>Reduce operational costs, eliminate errors, and improve efficiency, productivity, and accuracy through intelligent automation.</p>
                             <span class="rounded-button1">
                                 <i class="fa fa-dollar-sign"></i>
                             </span>
                         </div>
                         <div class="service-image">
 
-                            <img src="images/bautomate-main/freight_forward-5.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-5.webp" class="img-fluid drive-projects-img" alt="">
 
                         </div>
                     </div>
