--- a/iot-solutions.html
+++ b/iot-solutions.html
@@ -176,13 +176,6 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-12">
-            <div class="featured-item style-3">
-              <div class="featured-icon" style="padding-right: 30px;">
-                <i class="fas fa-box"></i>
-
-
-        <div class="row">
           <!-- First Row -->
           <div class="col-lg-4 col-md-6">
               <div class="featured-item style-4">
@@ -199,33 +192,34 @@
                                           </div>
               </div>
           </div>
-
-          <div class="col-lg-4 col-md-12 mt-5 mt-lg-0">
-            <div class="featured-item style-3">
-              <div class="featured-icon" style="padding-right: 30px;">
-                <i class="fas fa-tachometer-alt"></i>
-              </div>
-              <div class="featured-desc">
-                <div class="featured-title">
-                  <h5>
-                    Real Time Energy Consumption Insights</h5>
-                </div>
-                <p>Reduce energy use and environmental impact with real-time insights across AC/DC metering systems.</p>
-
+     
+          <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
+              <div class="featured-item style-4">
+                  <div class="featured-icon">
+                    <i class="fas fa-tachometer-alt"></i>
+                      <span class="feature-number">02</span>
+                  </div>
+                  <div class="featured-desc">
+                      <div class="featured-title">
+                          <h5> Real Time Energy Consumption Insights</h5>
+                      </div>
+                      <p>Reduce energy use and environmental impact with real-time insights across AC/DC metering systems.</p>
+                    </div>
               </div>
           </div>
-
-          <div class="col-lg-4 col-md-12 mt-5 mt-lg-0">
-            <div class="featured-item style-3">
-              <div class="featured-icon" style="padding-right: 30px;">
-                <i class="fas fa-heartbeat"></i>
-              </div>
-              <div class="featured-desc">
-                <div class="featured-title">
-                  <h5>Improves Overall Wellness</h5>
-                </div>
-                <p>Track conditions and get instant alerts for proactive maintenance and optimal performance.</p>
-
+     
+          <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
+              <div class="featured-item style-4">
+                  <div class="featured-icon">
+                    <i class="fas fa-heartbeat"></i>
+                      <span class="feature-number">03</span>
+                  </div>
+                  <div class="featured-desc">
+                      <div class="featured-title">
+                          <h5>Improves Overall Wellness</h5>
+                      </div>
+                      <p>Track conditions and get instant alerts for proactive maintenance and optimal performance.</p>
+                    </div>
               </div>
           </div>
    
@@ -278,9 +272,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-
-                  <img src="images/Innomiant solutions/Usecase-1.webp" style="padding-top:30px;" class="img-fluid"
-
+                  <img src="images/Innomiant solutions/Usecase-1.webp" style="padding-top:30px;" class="img-fluid drive-projects-img"
                     alt="">
                 </div>
               </div>
@@ -297,10 +289,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-
-
-                  <img src="images/Innomiant solutions/Usecase-2.webp" style="padding-top:30px;" class="img-fluid"
-
+                  <img src="images/Innomiant solutions/Usecase-2.webp" style="padding-top:30px;" class="img-fluid drive-projects-img"
                     alt="">
                 </div>
               </div>
@@ -317,9 +306,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-
-                  <img src="images/Innomiant solutions/Usecase-3.webp" style="padding-top:30px;" class="img-fluid"
-
+                  <img src="images/Innomiant solutions/Usecase-3.webp" style="padding-top:30px;" class="img-fluid drive-projects-img"
                     alt="">
                 </div>
               </div>
@@ -336,9 +323,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-
-                  <img src="images/Innomiant solutions/Usecase-4.webp" style="padding-top:30px;" class="img-fluid"
-
+                  <img src="images/Innomiant solutions/Usecase-4.webp" style="padding-top:30px;" class="img-fluid drive-projects-img"
                     alt="">
                 </div>
               </div>
@@ -372,9 +357,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-
-                  <img src="images/Innomiant solutions/Usecase-5.webp" style="padding-top:30px;" class="img-fluid"
-
+                  <img src="images/Innomiant solutions/Usecase-5.webp" style="padding-top:30px;" class="img-fluid drive-projects-img"
                     alt="">
                 </div>
               </div>
@@ -391,9 +374,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-
-                  <img src="images/Innomiant solutions/Usecase-6.webp" style="padding-top:30px;" class="img-fluid"
-
+                  <img src="images/Innomiant solutions/Usecase-6.webp" style="padding-top:30px;" class="img-fluid drive-projects-img"
                     alt="">
                 </div>
               </div>
@@ -411,9 +392,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-
-                  <img src="images/Innomiant solutions/Usecase-7.webp" style="padding-top:30px;" class="img-fluid"
-
+                  <img src="images/Innomiant solutions/Usecase-7.webp" style="padding-top:30px;" class="img-fluid drive-projects-img"
                     alt="">
                 </div>
               </div>
@@ -431,9 +410,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-
-                  <img src="images/Innomiant solutions/Usecase-8.webp" style="padding-top:30px;" class="img-fluid"
-
+                  <img src="images/Innomiant solutions/Usecase-8.webp" style="padding-top:30px;" class="img-fluid drive-projects-img"
                     alt="">
                 </div>
               </div>
