--- a/Ruby-on-Rails.html
+++ b/Ruby-on-Rails.html
@@ -13,7 +13,8 @@
 <title>SMI-Ruby on Rails</title>
 
 <!-- Favicon Icon -->
-<link rel="shortcut icon" href="images/smi-icon.webp" />
+<link rel="shortcut icon" href="images/smi-icon.png" />
+
 <!-- inject css start -->
 
 <!--== bootstrap -->
@@ -76,7 +77,7 @@ Icon for services and Projects -->
 
 <div id="ht-preloader">
   <div class="loader clear-loader">
-    <img class="img-fluid" src="images/smi-logo.webp" alt="Lodaer Img">
+    <img class="img-fluid" src="images/smi-logo.png" alt="Lodaer Img">
   </div>
 </div>
 
@@ -122,7 +123,7 @@ Icon for services and Projects -->
 </section> -->
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/Rubyonrails/image.webp');">
+  <div class="banner-img" style="background-image: url('images/services_Images/Rubyonrails/image.png');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
@@ -318,7 +319,7 @@ Icon for services and Projects -->
                     <div class="item">
                         <div class="service-item style-2">
                             <div class="service-image">
-                                <img src="images/services_Images/Rubyonrails/p1.webp" class="img-fluid" alt="Mobile Development">
+                                <img src="images/services_Images/Rubyonrails/p1.png" class="img-fluid" alt="Mobile Development">
                             </div>
                             <div class="service-desc">
                                 <h4><a href="">Student Success Suite</a></h4>
@@ -338,7 +339,7 @@ Icon for services and Projects -->
                     <div class="item">
                         <div class="service-item style-2">
                             <div class="service-image">
-                                <img src="images/services_Images/Rubyonrails/p2.webp" class="img-fluid" alt="Social Media Marketing">
+                                <img src="images/services_Images/Rubyonrails/p2.png" class="img-fluid" alt="Social Media Marketing">
                             </div>
                             <div class="service-desc">
                                 <h4><a href="#">Online Video Course Platform</a></h4>
@@ -358,7 +359,7 @@ Icon for services and Projects -->
                     <div class="item">
                         <div class="service-item style-2">
                             <div class="service-image">
-                                <img src="images/services_Images/Rubyonrails/p3.webp" class="img-fluid" alt="Automobile">
+                                <img src="images/services_Images/Rubyonrails/p3.png" class="img-fluid" alt="Automobile">
                             </div>
                             <div class="service-desc">
                                 <h4><a href="">Health Systems - Provider App</a></h4>
@@ -400,7 +401,7 @@ Icon for services and Projects -->
             <!-- Webex Service Item -->
             <div class="service-item1 style-1">
               <div class="service-image">
-                <img src="images/services_Images/Rubyonrails/support.webp" class="img-fluid drive-projects-img" alt="" decoding="async">
+                <img src="images/services_Images/Rubyonrails/support.png" class="img-fluid" alt="" decoding="async">
               </div>
               <div class="service-desc">
                 <div class="service-title">
@@ -418,7 +419,7 @@ Icon for services and Projects -->
             <!-- ERP Application Service Item -->
             <div class="service-item1 style-1">
               <div class="service-image">
-                <img src="images/services_Images/Rubyonrails/improve.webp" class="img-fluid drive-projects-img" alt="">
+                <img src="images/services_Images/Rubyonrails/improve.png" class="img-fluid" alt="">
               </div>
               <div class="service-desc">
                 <div class="service-title">
@@ -436,7 +437,7 @@ Icon for services and Projects -->
             <!-- DOM Service Item (Active) -->
             <div class="service-item1 style-1 active">
               <div class="service-image">
-                <img src="images/services_Images/Rubyonrails/trans.webp" class="img-fluid drive-projects-img" alt="">
+                <img src="images/services_Images/Rubyonrails/trans.png" class="img-fluid" alt="">
               </div>
               <div class="service-desc">
                 <div class="service-title">
@@ -472,7 +473,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/services_Images/Rubyonrails/p1.webp" alt="Student Success Suite Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+          <img src="images/services_Images/Rubyonrails/p1.png" alt="Student Success Suite Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
         </div>
         <div class="project-content">
           <p>
@@ -494,7 +495,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/services_Images/Rubyonrails/p2.webp" alt="Online Video Course Platform Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+          <img src="images/services_Images/Rubyonrails/p2.png" alt="Online Video Course Platform Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
         </div>
         <div class="project-content">
           <p>
@@ -516,7 +517,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/services_Images/Rubyonrails/p3.webp" alt="Health Systems Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+          <img src="images/services_Images/Rubyonrails/p3.png" alt="Health Systems Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
         </div>
         <div class="project-content">
           <p>
