--- a/bautomate.html
+++ b/bautomate.html
@@ -79,13 +79,13 @@ Icon for services and Projects -->
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner " style="height: 600px;">
                 <div class="carousel-item active">
-                    <img src="./images/bautomate-main/Bautomate-banner-1.webp" class="d-block w-100" alt="Image 1" height="600">
+                    <img src="./images/bautomate-main/Bautomate-banner-1.png" class="d-block w-100" alt="Image 1" height="600">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/bautomate-main/bautomate-banner-2.webp" class="d-block w-100" alt="Image 2" height="600">
+                    <img src="./images/bautomate-main/bautomate-banner-2.png" class="d-block w-100" alt="Image 2" height="600">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/bautomate-main/bautomate-banner-3.webp" class="d-block w-100" alt="Image 3" height="600">
+                    <img src="./images/bautomate-main/bautomate-banner-3.png" class="d-block w-100" alt="Image 3" height="600">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
