--- a/index.html
+++ b/index.html
@@ -270,22 +270,22 @@
               <div class="row">
                 <div class="col-md-6 org-box animate__animated" data-animate-on-view="image">
                   <div class="featured-item style-3-f">
-                    <img src="./images/client/techmango-black.png" alt="Company 1" class="orgNew-logo" loading="lazy">
+                    <img src="./images/client/techmango-black.webp" alt="Company 1" class="orgNew-logo" loading="lazy">
                   </div>
                 </div>
                 <div class="col-md-6 mt-5 org-box animate__animated" data-animate-on-view="image">
                   <div class="featured-item style-3-f">
-                    <img src="./images/client/innomaint-logo.png" alt="Company 2" class="orgNew-logo" loading="lazy">
+                    <img src="./images/client/innomaint-logo.webp" alt="Company 2" class="orgNew-logo" loading="lazy">
                   </div>
                 </div>
                 <div class="col-md-6 mt-5 mt-md-0 mt-lg-0 org-box animate__animated" data-animate-on-view="image">
                   <div class="featured-item style-3-f">
-                    <img src="./images/client/bautomate-logo.png" alt="Company 3" class="orgNew-logo" loading="lazy">
+                    <img src="./images/client/bautomate-logo.webp" alt="Company 3" class="orgNew-logo" loading="lazy">
                   </div>
                 </div>
                 <div class="col-md-6 mt-5 org-box animate__animated" data-animate-on-view="image">
                   <div class="featured-item style-3-f">
-                    <img src="./images/client/devden-black.png" alt="Company 4" class="orgNew-logo" loading="lazy">
+                    <img src="./images/client/devden-black.webp" alt="Company 4" class="orgNew-logo" loading="lazy">
                   </div>
                 </div>
               </div>
