Comment out preloader sections in multiple HTML files

--- a/bautomate.html
+++ b/bautomate.html
@@ -68,11 +68,11 @@ Icon for services and Projects -->
 
 <body>
 
-    <div id="ht-preloader">
+    <!-- <div id="ht-preloader">
         <div class="loader clear-loader">
             <img class="img-fluid" src="images/smi-logo.webp" alt="Lodaer Img">
         </div>
-    </div>
+    </div> -->
     <div>
         <div id="header-placeholder"></div>
         
