--- a/ar&vr-services.html
+++ b/ar&vr-services.html
@@ -66,11 +66,11 @@
   
 <!-- preloader start -->
 
-<div id="ht-preloader">
+<!-- <div id="ht-preloader">
   <div class="loader clear-loader">
     <img class="img-fluid" src="images/smi-logo.webp" alt="Lodaer Img">
   </div>
-</div>
+</div> -->
 
 <!-- preloader end -->
 
