--- a/cloud-migration-solutions.html
+++ b/cloud-migration-solutions.html
@@ -78,12 +78,12 @@
 <div class="page-wrapper">
   
 <!-- preloader start -->
-
+<!-- 
 <div id="ht-preloader">
   <div class="loader clear-loader">
     <img class="img-fluid" src="images/smi-logo.webp" alt="Lodaer Img">
   </div>
-</div>
+</div> -->
 
 <!-- preloader end -->
 
