--- a/data-engineering-services.html
+++ b/data-engineering-services.html
@@ -79,11 +79,11 @@
   
 <!-- preloader start -->
 
-<div id="ht-preloader">
+<!-- <div id="ht-preloader">
   <div class="loader clear-loader">
     <img class="img-fluid" src="images/smi-logo.webp" alt="Lodaer Img">
   </div>
-</div>
+</div> -->
 
 <!-- preloader end -->
 
