Update image paths and clean up commented tags in HTML files

--- a/blog-ocr.html
+++ b/blog-ocr.html
@@ -64,7 +64,7 @@
 
 <div id="ht-preloader">
   <div class="loader clear-loader">
-    <img class="img-fluid" src="../smi/images/smi-logo.webp" alt="Lodaer Img">
+    <img class="img-fluid" src="images/smi-logo.webp" alt="Lodaer Img">
   </div>
 </div>
 
@@ -249,14 +249,7 @@
                 With Bautomate, you can mitigate fraud risk, speed up turnaround time, and lower the cost of processing claims.
             </p>
 
-            <div class="theme-tags">
-              <span class="tags-links">
-                Tags: 
-                <a href="/tags/bautomate" rel="tag">Bautomate</a>
-                <a href="/tags/ocr" rel="tag">OCR</a>
-                <a href="/tags/ocr-in-insurance" rel="tag">OCR in Insurance Claim</a>
-              </span>
-            </div>
+            
           </div>
         </div>
       </div>
