--- a/articles.html
+++ b/articles.html
@@ -60,7 +60,7 @@
 
 <div id="ht-preloader">
   <div class="loader clear-loader">
-    <img class="img-fluid" src="../smi/images/smi-logo.webp" alt="Lodaer Img">
+    <img class="img-fluid" src="images/smi-logo.webp" alt="Lodaer Img" />
   </div>
 </div>
 
