--- a/blog-volume-hire.html
+++ b/blog-volume-hire.html
@@ -65,7 +65,7 @@
 
 <div id="ht-preloader">
   <div class="loader clear-loader">
-    <img class="img-fluid" src="../smi/images/smi-logo.webp" alt="Lodaer Img">
+    <img class="img-fluid" src="images/smi-logo.webp" alt="Lodaer Img">
   </div>
 </div>
 
@@ -384,14 +384,14 @@
 
             
 
-            <div class="theme-tags">
+            <!-- <div class="theme-tags">
               <span class="tags-links">
                 Tags: 
                 <a href="/tags/hiring-technology-trends" rel="tag">Hiring technology trends</a>
                 <a href="/tags/hr-automation" rel="tag">HR Automation</a>
                 <a href="/tags/volume-hire" rel="tag">Volume Hire Best Practices</a>
               </span>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
