--- a/blogs.html
+++ b/blogs.html
@@ -62,7 +62,7 @@
 
 <div id="ht-preloader">
   <div class="loader clear-loader">
-    <img class="img-fluid" src="../smi/images/smi-logo.webp" alt="Loader Img">
+    <img class="img-fluid" src="images/smi-logo.webp" alt="Loader Img">
   </div>
 </div>
 
