--- a/blog-ocr.html
+++ b/blog-ocr.html
@@ -159,7 +159,7 @@
             </p>
 
             <div class="benefitsGrid">
-              <div class="featured-item style-3" style="padding: 2rem 2.5rem 2rem 2rem">
+              <div class="featured-item style-3 style-3-new" style="padding: 2rem 2.5rem 2rem 2rem">
                 <div class="featured-icon blog-page-featured-item">
                   <i class="flaticon-calendar"></i>
                 </div>
@@ -172,7 +172,7 @@
                   </p>
                 </div>
               </div>
-              <div class="featured-item style-3" style="padding: 2rem 2.5rem 2rem 2rem">
+              <div class="featured-item style-3 style-3-new" style="padding: 2rem 2.5rem 2rem 2rem">
                 <div class="featured-icon blog-page-featured-item">
                   <i class="flaticon-target"></i>
                 </div>
@@ -185,7 +185,7 @@
                   </p>
                 </div>
               </div>
-              <div class="featured-item style-3" style="padding: 2rem 2.5rem 2rem 2rem">
+              <div class="featured-item style-3 style-3-new" style="padding: 2rem 2.5rem 2rem 2rem">
                 <div class="featured-icon blog-page-featured-item">
                   <i class="flaticon-social-media"></i>
                 </div>
@@ -198,7 +198,7 @@
                   </p>
                 </div>
               </div>
-              <div class="featured-item style-3" style="padding: 2rem 2.5rem 2rem 2rem">
+              <div class="featured-item style-3 style-3-new" style="padding: 2rem 2.5rem 2rem 2rem">
                 <div class="featured-icon blog-page-featured-item">
                   <i class="flaticon-rating"></i>
                 </div>
@@ -211,7 +211,7 @@
                   </p>
                 </div>
               </div>
-              <div class="featured-item style-3" style="padding: 2rem 2.5rem 2rem 2rem">
+              <div class="featured-item style-3 style-3-new" style="padding: 2rem 2.5rem 2rem 2rem">
                 <div class="featured-icon blog-page-featured-item">
                   <i class="flaticon-boost"></i>
                 </div>
@@ -224,7 +224,7 @@
                   </p>
                 </div>
               </div>
-              <div class="featured-item style-3" style="padding: 2rem 2.5rem 2rem 2rem">
+              <div class="featured-item style-3 style-3-new" style="padding: 2rem 2.5rem 2rem 2rem">
                 <div class="featured-icon blog-page-featured-item">
                   <i class="flaticon-seo"></i>
                 </div>
