business intelligence, cloud computing, data science. enterprise integration files changed

--- a/business-intelligence-services.html
+++ b/business-intelligence-services.html
@@ -245,7 +245,7 @@
           <!-- Building Management System Service Item -->
           <div class="item">
             <div class="service-item style-2">
-              <div class="service-image">
+              <div class="service-image cards-blackbg">
                 <img src="images/business-intelligence-services/p1.webp" class="img-fluid" alt="Building Management System">
               </div>
               <div class="service-desc">
@@ -264,7 +264,7 @@
           <!-- Smart Energy Solutions Service Item -->
           <div class="item">
             <div class="service-item style-2">
-              <div class="service-image">
+              <div class="service-image cards-blackbg">
                 <img src="images/business-intelligence-services/p2.webp" class="img-fluid" alt="Smart Energy Solutions">
               </div>
               <div class="service-desc">
@@ -283,7 +283,7 @@
           <!-- Welding Quality Monitoring System Service Item -->
           <div class="item">
             <div class="service-item style-2">
-              <div class="service-image">
+              <div class="service-image cards-blackbg">
                 <img src="images/business-intelligence-services/p3.webp" class="img-fluid" alt="Welding Quality Monitoring System">
               </div>
               <div class="service-desc">
@@ -302,7 +302,7 @@
 
           <div class="item">
             <div class="service-item style-2">
-              <div class="service-image">
+              <div class="service-image cards-blackbg">
                 <img src="images/business-intelligence-services/p4.webp" class="img-fluid" alt="Welding Quality Monitoring System">
               </div>
               <div class="service-desc">
@@ -317,8 +317,6 @@
               </div>
             </div>
           </div>
-
-
         </div>
       </div>
     </div>
