--- a/data-science-services.html
+++ b/data-science-services.html
@@ -245,7 +245,7 @@ Icon for services and Projects -->
                     data-md-items="2" data-sm-items="1" data-margin="30" data-autoplay="true">
                     <div class="item">
                         <div class="service-item style-2">
-                            <div class="service-image">
+                            <div class="service-image cards-blackbg">
                                 <img src="images/development-services/data-science-offerings-1.webp" class="img-fluid"
                                     alt="Work Order Management">
                             </div>
@@ -261,7 +261,7 @@ Icon for services and Projects -->
 
                     <div class="item">
                         <div class="service-item style-2">
-                            <div class="service-image">
+                            <div class="service-image cards-blackbg">
                               <img src="images/development-services/data-science-offerings-2.webp" class="img-fluid"
                                     alt="Preventive Maintenance Automation">
                             </div>
@@ -277,7 +277,7 @@ Icon for services and Projects -->
 
                     <div class="item">
                         <div class="service-item style-2">
-                            <div class="service-image">
+                            <div class="service-image cards-blackbg">
                               <img src="images/development-services/data-science-offerings-3.webp" class="img-fluid"
                                     alt="Powerful & Customizable Dashboard">
                             </div>
@@ -293,7 +293,7 @@ Icon for services and Projects -->
 
                     <div class="item">
                         <div class="service-item style-2">
-                            <div class="service-image">
+                            <div class="service-image cards-blackbg">
                               <img src="images/development-services/data-science-offerings-4.webp" class="img-fluid"
                                     alt="Inventory Spare Parts Management">
                             </div>
@@ -309,7 +309,7 @@ Icon for services and Projects -->
 
                     <div class="item">
                       <div class="service-item style-2">
-                          <div class="service-image">
+                          <div class="service-image cards-blackbg">
                             <img src="images/development-services/data-science-offerings-5.webp" class="img-fluid"
                                   alt="Inventory Spare Parts Management">
                           </div>
@@ -325,7 +325,7 @@ Icon for services and Projects -->
 
                     <div class="item">
                         <div class="service-item style-2">
-                            <div class="service-image">
+                            <div class="service-image cards-blackbg">
                               <img src="images/development-services/data-science-offerings-6.webp" class="img-fluid"
                                     alt="Inventory Spare Parts Management">
                             </div>
@@ -341,7 +341,7 @@ Icon for services and Projects -->
 
                     <div class="item">
                         <div class="service-item style-2">
-                            <div class="service-image">
+                            <div class="service-image cards-blackbg">
                               <img src="images/development-services/data-science-offerings-7.webp" class="img-fluid"
                                     alt="Inventory Spare Parts Management">
                             </div>
@@ -357,7 +357,7 @@ Icon for services and Projects -->
 
                     <div class="item">
                         <div class="service-item style-2">
-                            <div class="service-image">
+                            <div class="service-image cards-blackbg">
                               <img src="images/development-services/data-science-offerings-8.webp" class="img-fluid"
                                     alt="Inventory Spare Parts Management">
                             </div>
