--- a/Enterprise-Integration-Services.html
+++ b/Enterprise-Integration-Services.html
@@ -303,7 +303,7 @@
           <!-- Mobile Development Service Item -->
           <div class="item">
             <div class="service-item style-2">
-              <div class="service-image">
+              <div class="service-image cards-blackbg">
                 <img src="images/services_Images/EIS/WebEx1.webp" class="img-fluid" alt="Mobile Development">
               </div>
               <div class="service-desc">
@@ -322,7 +322,7 @@
           <!-- Social Media Marketing Service Item -->
           <div class="item">
             <div class="service-item style-2">
-              <div class="service-image">
+              <div class="service-image cards-blackbg">
                 <img src="images/services_Images/EIS/Erp1.webp" class="img-fluid" alt="Social Media Marketing">
               </div>
               <div class="service-desc">
@@ -342,7 +342,7 @@
 
           <div class="item">
             <div class="service-item style-2">
-              <div class="service-image">
+              <div class="service-image cards-blackbg">
                 <img src="images/services_Images/EIS/p3.webp" class="img-fluid" alt="Automobile">
               </div>
               <div class="service-desc">
