--- a/cloud-computing-services.html
+++ b/cloud-computing-services.html
@@ -234,13 +234,6 @@
 
 
 
-
-
-
-
-
-
-
   <section class="background-gray" style="padding-bottom: 0px !important;">
     <div class="container">
       <div class="row">
@@ -251,7 +244,7 @@
             <!-- Building Management System Service Item -->
             <div class="item">
               <div class="service-item style-2">
-                <div class="service-image">
+                <div class="service-image cards-blackbg">
                   <img src="images/services_Images/Cloud/p1.webp" class="img-fluid" alt="Building Management System">
                 </div>
                 <div class="service-desc">
@@ -270,7 +263,7 @@
             <!-- Smart Energy Solutions Service Item -->
             <div class="item">
               <div class="service-item style-2">
-                <div class="service-image">
+                <div class="service-image cards-blackbg">
                   <img src="images/services_Images/Cloud/p2.webp" class="img-fluid" alt="Smart Energy Solutions">
                 </div>
                 <div class="service-desc">
@@ -289,7 +282,7 @@
             <!-- Welding Quality Monitoring System Service Item -->
             <div class="item">
               <div class="service-item style-2">
-                <div class="service-image">
+                <div class="service-image cards-blackbg">
                   <img src="images/services_Images/Cloud/p3.webp" class="img-fluid" alt="Welding Quality Monitoring System">
                 </div>
                 <div class="service-desc">
