--- a/freight-forwarding-automation.html
+++ b/freight-forwarding-automation.html
@@ -14,47 +14,47 @@
     <title>Smi-Freight-Forwarding-Automation</title>
 
     <!-- Favicon Icon -->
-  <link rel="shortcut icon" href="images/smi-icon.webp" />
-  <link href="css/home.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="./images/smi-icon.webp" />
+  <link href="./css/home.css" rel="stylesheet" type="text/css" />
 
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
     <!--== magnific-popup -->
-    <link href="css/magnific-popup.css" rel="stylesheet" type="text/css" />
+    <link href="./css/magnific-popup.css" rel="stylesheet" type="text/css" />
 
     <!--== line-awesome -->
-    <link href="css/line-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="./css/line-awesome.min.css" rel="stylesheet" type="text/css" />
 
     <!--== owl -->
-    <link href="css/owl.carousel.css" rel="stylesheet" type="text/css" />
+    <link href="./css/owl.carousel.css" rel="stylesheet" type="text/css" />
 
     <!--== odometer -->
-    <link href="css/odometer.css" rel="stylesheet" type="text/css" />
+    <link href="./css/odometer.css" rel="stylesheet" type="text/css" />
 
     <!--== base -->
-    <link href="css/spacing.css" rel="stylesheet" type="text/css" />
+    <link href="./css/spacing.css" rel="stylesheet" type="text/css" />
 
     <!--== base -->
-    <link href="css/base.css" rel="stylesheet" type="text/css" />
+    <link href="./css/base.css" rel="stylesheet" type="text/css" />
 
     <!--== shortcodes -->
-    <link href="css/shortcodes.css" rel="stylesheet" type="text/css" />
+    <link href="./css/shortcodes.css" rel="stylesheet" type="text/css" />
 
     <!--== theme-style -->
-    <link href="css/theme-style.css" rel="stylesheet" type="text/css" />
+    <link href="./css/theme-style.css" rel="stylesheet" type="text/css" />
 
-    <link href="css/contact.css" rel="stylesheet" type="text/css" />
+    <link href="./css/contact.css" rel="stylesheet" type="text/css" />
 
     <!-- inject css end -->
 
-    <link href="css/service.css" rel="stylesheet" type="text/css" />
+    <link href="./css/service.css" rel="stylesheet" type="text/css" />
 
     <!-- innomiant solution for css -->
-    <link href="css/innomiant.css" rel="stylesheet" type="text/css" />
+    <link href="./css/innomiant.css" rel="stylesheet" type="text/css" />
     <!-- contact icon  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <link href="css/contact.css" rel="stylesheet" type="text/css" />
+    <link href="./css/contact.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Icon fro use cases -->
@@ -62,7 +62,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fi-css@2.0.1/dist/fi.css" />
 
-    <link href="css/Freight-Forwarding-Automation.css" rel="stylesheet" type="text/css" />
+    <link href="./css/Freight-Forwarding-Automation.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flaticon@2.1.0/css/flaticon.min.css">
 
@@ -73,7 +73,7 @@
 
     <div id="ht-preloader">
         <div class="loader clear-loader">
-            <img class="img-fluid" src="images/smi-logo.webp" alt="Lodaer Img">
+            <img class="img-fluid" src="./images/smi-logo.webp" alt="Lodaer Img">
         </div>
     </div>
     <div id="header-placeholder"></div>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="banner-business-container"
-        style="background-image: url('images/bautomate-main/Ai\ Driven\ Freight\ Forwarding-banner.webp'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+        style="background-image: url('images/bautomate-main/Ai Driven Freight Forwarding-banner.webp'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <!-- Content Section -->
         <div class="banner-business-content">
 
@@ -117,7 +117,7 @@
 
     <!-- center image section -->
     <div class="center-container-freightimg">
-      <img src="images/bautomate-main/freight-forward-centerimg.webp" alt="Centered Image" class="center-image-freight">
+      <img src="./images/bautomate-main/freight-forward-centerimg.webp" alt="Centered Image" class="center-image-freight">
     </div>
   
    <!-- solutions start -->
