--- a/index.html
+++ b/index.html
@@ -219,16 +219,16 @@
       <section class="about-abtNew">
         <div class="grid-abtNew">
             <div class="image-box-abtNew large-abtNew" id="hb-img1">
-                <img src="./images/about/smi-1.webp" alt="Client 1" loading="lazy">
+                <img src="./images/about/new/1.jpg" alt="Client 1" loading="lazy">
             </div>
             <div class="image-box-abtNew small-abtNew" id="hb-img1">
-                <img src="./images/about/smi-2.webp" alt="Client 2" loading="lazy">
+                <img src="./images/about/new/10.jpg" alt="Client 2" loading="lazy">
             </div>
             <!-- <div class="image-box-abtNew medium-abtNew">
                 <img src="./images/about/smi-3.jpg" alt="Client 3">
             </div> -->
             <div class="image-box-abtNew small-abtNew">
-                <img src="./images/about/smi-4.webp" alt="Client 4" loading="lazy">
+                <img src="./images/about/new/3.jpg" alt="Client 4" loading="lazy">
             </div>
     
             <div class="intro-box-abtNew">
@@ -237,16 +237,16 @@
             </div>
     
             <div class="image-box-abtNew medium-abtNew" id="hb-img1">
-                <img src="./images/about/smi-5.webp" alt="Client 5" loading="lazy">
+                <img src="./images/about/new/4.jpg" alt="Client 5" loading="lazy">
             </div>
             <div class="image-box-abtNew large-abtNew" id="hb-img1">
-                <img src="./images/about/smi-6.webp" alt="Client 1" loading="lazy">
+                <img src="./images/about/new/5.jpg" alt="Client 1" loading="lazy">
             </div>
             <div class="image-box-abtNew small-abtNew" id="hb-img1">
-                <img src="./images/about/smi-7.webp" alt="Client 2" loading="lazy">
+                <img src="./images/about/new/6.jpg" alt="Client 2" loading="lazy">
             </div>
             <div class="image-box-abtNew medium-abtNew">
-                <img src="./images/about/smi-8.webp" alt="Client 3" loading="lazy">
+                <img src="./images/about/new/8.jpg" alt="Client 3" loading="lazy">
             </div>
         </div>
     </section>
