--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
 
     <div class="hero-banner-about">
       <video autoplay muted loop playsinline class="hero-video-about">
-        <source src="./images/about/about-bg.mp4" type="video/mp4" />
+        <source src="./images/v22.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
       <div class="hero-content-about">
