--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@
       .team-members {
         display: flex;
         justify-content: center;
-        gap: 100px;
+        gap: 50px;
         flex-wrap: wrap;
         /* Ensures wrapping on smaller screens */
       }
@@ -331,7 +331,7 @@
         border-radius: 10px;
         /* Smooth corners */
         transition: transform 0.3s ease, box-shadow 0.3s ease-in-out;
-        max-width: 400px;
+        max-width: 300px;
         padding: 20px;
       }
 
@@ -343,8 +343,8 @@
       }
 
       .team-photo {
-        width: 300px;
-        height: 300px;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease;
@@ -966,6 +966,17 @@
           <img src="./images/about/new/jayashree.webp" alt="Team Member 2" class="team-photo" />
           <h3 class="team-name">Jayashree</h3>
           <p class="team-designation">Advisory Board of SMI Technology and CEO of Techmango</p>
+        </div>
+        <div class="team-member">
+          <img src="./images/about/new/Padmaja Gedapar.png" alt="Team Member 2" class="team-photo" />
+          <h3 class="team-name">Padmaja Gedapar</h3>
+          <p class="team-designation">1st degree connection 1stVice President - MENA</p>
+        </div>
+        <div class="team-member">
+          <img src="./images/about/new/Selva Ganesh M.P.png" alt="Team Member 2" class="team-photo" />
+          <h3 class="team-name">Selva Ganesh M.P</h3>
+          <p class="team-designation">Founder Managing Director
+            Bautomate · Self-employed</p>
         </div>
       </div>
     </section>
