--- a/header.html
+++ b/header.html
@@ -374,7 +374,7 @@
                 </div>
                 <div class="button-container-anmIcon">
                   <a class="primary-btn-anmIcon" href="contact.html">
-                    <span class="btn-text-anmIcon">Get a Proposal</span>
+                    <span class="btn-text-anmIcon">Talk to us</span>
                     <img
                       class="btn-icon-anmIcon"
                       src="images/fast-forward.gif"
