--- a/contact.html
+++ b/contact.html
@@ -129,9 +129,25 @@
         <p class="banner-business-description">
           Contact us for inquiries, support, or collaboration opportunities!
         </p>
+        <div class="button-container-anmIcon">
+          <a class="primary-btn-anmIcon" href="careers.html">
+            <i class="fas fa-users team-icon"></i>
+            <span class="btn-text-anmIcon">Join our Team</span>
+          </a>
+        </div>
+
+
       </div>
     </div>
-
+    <style>
+      .team-icon {
+        margin-right: 10px;
+        /* Adds space between icon and text */
+        font-size: 18px;
+        /* Adjust size as needed */
+        vertical-align: middle;
+      }
+    </style>
     <!--hero section end-->
 
 
@@ -255,7 +271,7 @@
               </div>
             </div>
 
-            
+
             <div class="col-12 col-lg-6 ps-lg-10">
               <div class="bg-dark-2 p-7 rounded">
                 <div class="theme-title ">
