--- a/about.html
+++ b/about.html
@@ -970,13 +970,13 @@
         <div class="team-member">
           <img src="./images/about/new/Padmaja Gedapar.png" alt="Team Member 2" class="team-photo" />
           <h3 class="team-name">Padmaja Gedapar</h3>
-          <p class="team-designation">1st degree connection 1stVice President - MENA</p>
+          <p class="team-designation">Vice President <br>MENA</p>
         </div>
         <div class="team-member">
           <img src="./images/about/new/Selva Ganesh M.P.png" alt="Team Member 2" class="team-photo" />
           <h3 class="team-name">Selva Ganesh M.P</h3>
           <p class="team-designation">Founder Managing Director
-            Bautomate · Self-employed</p>
+            Bautomate </p>
         </div>
       </div>
     </section>
