--- a/about.html
+++ b/about.html
@@ -954,11 +954,15 @@
     <!--why choose us end-->
     <section class="meet-our-team">
       <h2 class="section-title">Meet Our Team</h2>
-      <div class="team-members">
+      <div class="team-member">
+          <img src="./images/about/new/Padmaja Gedapar.png" alt="Team Member 2" class="team-photo" />
+          <h3 class="team-name">Padmaja Gedapar</h3>
+          <p class="team-designation">CEO of SMI Technology LLC</p>
+        </div>
         <!-- Team Member 1 -->
         <div class="team-member">
           <img src="./images/about/new/AT srinivasan.webp" alt="Team Member 1" class="team-photo" />
-          <h3 class="team-name">A.T Srinivasan</h3>
+          <h3 class="team-name">AT Srinivasan</h3>
           <p class="team-designation">Advisory Board of SMI Technology and CEO of Innomaint</p>
         </div>
         <!-- Team Member 2 -->
@@ -967,17 +971,12 @@
           <h3 class="team-name">Jayashree</h3>
           <p class="team-designation">Advisory Board of SMI Technology and CEO of Techmango</p>
         </div>
+        
         <div class="team-member">
-          <img src="./images/about/new/Padmaja Gedapar.png" alt="Team Member 3" class="team-photo" />
-          <h3 class="team-name">Padmaja Gedapar</h3>
-          <p class="team-designation">Vice President <br>MENA</p>
-        </div>
-        <div class="team-member">
-          <img src="./images/about/new/Selva Ganesh M.P.png" alt="Team Member 4" class="team-photo" />
+          <img src="./images/about/new/Selva Ganesh M.P.png" alt="Team Member 2" class="team-photo" />
           <h3 class="team-name">Selva Ganesh M.P</h3>
           <p class="team-designation">Founder and Managing Director Bautomate </p>
         </div>
-      </div>
     </section>
     <!-- group of companies starts -->
 
