--- a/about.html
+++ b/about.html
@@ -977,6 +977,7 @@
           <h3 class="team-name">Selva Ganesh M.P</h3>
           <p class="team-designation">Founder and Managing Director Bautomate </p>
         </div>
+  </div>
     </section>
     <!-- group of companies starts -->
 
