--- a/about.html
+++ b/about.html
@@ -954,6 +954,7 @@
     <!--why choose us end-->
     <section class="meet-our-team">
       <h2 class="section-title">Meet Our Team</h2>
+      <div class="team-members">
       <div class="team-member">
           <img src="./images/about/new/Padmaja Gedapar.png" alt="Team Member 2" class="team-photo" />
           <h3 class="team-name">Padmaja Gedapar</h3>
