--- a/it-governance.html
+++ b/it-governance.html
@@ -200,12 +200,12 @@ Icon for services and Projects -->
 
 <div class="container text-center">
   <h2 class="mt-2 section-title">MANAGEMENT STANDARDS – ISO/IEC</h2>
-  <img src="./images/default-view.we/" alt="Management Standards" class="responsive-img">
+  <img src="./images/itgovernence/DKP.webp" alt="Management Standards" class="responsive-img">
 </div>
 <style>
   /* Default image (fallback) */
 .responsive-img {
-  content: url('./images/default-view.jpg');
+  content: url('./images/itgovernence/DKP.webp');
   max-width: 100%;
   height: auto;
 }
@@ -213,14 +213,14 @@ Icon for services and Projects -->
 /* For tablets and laptops (min-width: 768px) */
 @media (min-width: 768px) {
   .responsive-img {
-    content: url('./images/itgovernence/DKP.png');
+    content: url('./images/itgovernence/DKP.webp');
   }
 }
 
 /* For mobile devices (max-width: 767px) */
 @media (max-width: 767px) {
   .responsive-img {
-    content: url('./images/itgovernence/MOB.png');
+    content: url('./images/itgovernence/MOB.webp');
   }
 }
 
